--- a/citation.bib
+++ b/citation.bib
@@ -8,3 +8,13 @@
   year={2013},
   publisher={Am Soc Neuroradiology}
 }
+
+@article{muschelli2015fslr,
+  title={fslr: Connecting the FSL Software with R},
+  author={Muschelli, John and Sweeney, Elizabeth and Lindquist, Martin and Crainiceanu, Ciprian},
+  journal={The R Journal},
+  volume={7},
+  number={1},
+  pages={163--175},
+  year={2015}
+}
